syntax = "proto3";

//package prototest;
package com.example.demo.grpc;
//option java_package = "com.example.demo.prototest";
option java_multiple_files = true;

message TextMessage {
	string text = 1;
}

message TextRequest {
	TextMessage reqTextMsg = 1;
}

message TextResponse {
    TextMessage resTextMsg = 1;
}

service TextService {
    rpc protoTest(TextRequest) returns (TextResponse) {};
}